[gd_scene load_steps=3 format=3 uid="uid://edd49746fea74446afae6a"]

[ext_resource type="Script" path="res://Scripts/GameBootstrap.gd" id="1_yx7q3"]

[node name="GameBootstrap" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_yx7q3")

[node name="Overlay" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
modulate = Color(0, 0, 0, 0.75)

[node name="VBox" type="VBoxContainer" parent="Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -70.0
offset_right = 160.0
offset_bottom = 70.0
alignment = 1

[node name="TitleLabel" type="Label" parent="Overlay/VBox"]
layout_mode = 2
text = "Super Language Quest Of Fury"
align = 1
vertical_alignment = 1

[node name="StatusLabel" type="Label" parent="Overlay/VBox"]
layout_mode = 2
text = "Preparing systems..."
align = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="Overlay/VBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.0
max_value = 1.0
step = 0.0
value = 0.0

[node name="StartTimer" type="Timer" parent="."]
one_shot = true
wait_time = 0.1

